--- a/tox.ini
+++ b/tox.ini
@@ -6,7 +6,7 @@ deps = pytest
        coverage
 commands =  pytest
     coverage erase
-    coverage run --branch setup.py test
+    coverage run --branch __main__.py test
     coverage report --omit='.tox/*,venv/*'
     coverage html --omit='.tox/*,venv/*'
 
