--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,17 @@
 [tox]
 envlist = py36
 
-
 [testenv]
 deps = pytest
        coverage
 
 commands = pytest
            coverage erase
+           cmd /C if exist htmlcov rmdir /S /Q htmlcov
            coverage run --branch __main__.py test
-           coverage report --omit='.tox/*,venv/*'
-           coverage html --omit='.tox/*,venv/*'
+           coverage report --omit='.tox/*,venv/*,tests/'
+           coverage html --omit='.tox/*,venv/*,tests/'
+           cmd /C start htmlcov/index.html
 
 
+whitelist_externals=cmd
