--- a/tox.ini
+++ b/tox.ini
@@ -1,11 +1,14 @@
 [tox]
-envlist = py36
+envlist = py36, coverage, pylint
 
 [testenv]
 deps = pytest
-       coverage
-
 commands = pytest
+whitelist_externals = cmd
+
+[testenv:coverage]
+deps = coverage
+commands =
            coverage erase
            cmd /C if exist htmlcov rmdir /S /Q htmlcov
            coverage run --branch __main__.py test
@@ -13,4 +16,7 @@ commands = pytest
            coverage html --omit='.tox/*,venv/*,tests/'
            cmd /C start htmlcov/index.html
 
-whitelist_externals = cmd
+
+[testenv:pylint]
+deps = pylint
+commands = pylint bsuos
