--- a/tox.ini
+++ b/tox.ini
@@ -20,3 +20,5 @@ commands =
 [testenv:pylint]
 deps = pylint
 commands = pylint bsuos
+
+;doing testenv:coverage, means run the testenv with the environment coverage.
