--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,16 @@
 [tox]
-envlist = py36, coverage, pylint
+envlist =  test, mypy, coverage, pylint, docs
+;py36
 
-[testenv]
+[testenv:test]
 deps = pytest
 commands = pytest
 whitelist_externals = cmd
+
+[testenv:mypy]
+description = Type Checks the code, runs in strict mode, ensures all code has type annotations.
+deps = mypy
+commands = mypy bsuos --strict
 
 [testenv:coverage]
 deps = coverage
@@ -16,9 +22,17 @@ commands =
            coverage html --omit='.tox/*,venv/*,tests/'
            cmd /C start htmlcov/index.html
 
-
 [testenv:pylint]
+description = scores the code's linting quality.
 deps = pylint
 commands = pylint bsuos
 
-;doing testenv:coverage, means run the testenv with the environment coverage.
+[testenv:docs]
+description = Invoke sphinx-build to build the HTML docs
+deps = sphinx
+commands = cmd /C if exist "{toxinidir}\docs\rst" rmdir /S /Q "{toxinidir}\docs\rst"
+           sphinx-apidoc -f -o "{toxinidir}\docs\rst" "{toxinidir}\bsuos"
+           docs\make.bat clean
+           docs\make.bat html
+whitelist_externals = make.bat
+                      cmd
