--- a/tox.ini
+++ b/tox.ini
@@ -1,3 +1,6 @@
+[main]
+app_name = bsuos
+
 [tox]
 envlist =  test, mypy, coverage, pylint, docs
 ;py36
@@ -31,7 +34,7 @@ commands = pylint bsuos
 description = Invoke sphinx-build to build the HTML docs
 deps = sphinx
 commands = cmd /C if exist "{toxinidir}\docs\rst" rmdir /S /Q "{toxinidir}\docs\rst"
-           sphinx-apidoc -f -o "{toxinidir}\docs\rst" "{toxinidir}\bsuos"
+           sphinx-apidoc -f -o "{toxinidir}\docs\rst" "{toxinidir}/{[main]app_name}"
            docs\make.bat clean
            docs\make.bat html
 whitelist_externals = make.bat
