--- a/tox.ini
+++ b/tox.ini
@@ -1,5 +1,5 @@
 [main]
-app_name = bsuos
+app_name = bsuos  ; to use it, replace anywhere that has bsuos with {[main]app_name}
 
 [tox]
 envlist =  test, mypy, coverage, pylint, docs
@@ -13,7 +13,7 @@ whitelist_externals = cmd
 [testenv:mypy]
 description = Type Checks the code, runs in strict mode, ensures all code has type annotations.
 deps = mypy
-commands = mypy bsuos --strict
+commands = mypy {[main]app_name} --strict
 
 [testenv:coverage]
 deps = coverage
@@ -28,7 +28,7 @@ commands =
 [testenv:pylint]
 description = scores the code's linting quality.
 deps = pylint
-commands = pylint bsuos
+commands = pylint {[main]app_name}
 
 [testenv:docs]
 description = Invoke sphinx-build to build the HTML docs
