--- a/tox.ini
+++ b/tox.ini
@@ -1,28 +1,29 @@
 [main]
-app_name = bsuos  ; to use it, replace anywhere that has bsuos with {[main]app_name}
+app_name = bsuos
 
 [tox]
 envlist =  test, mypy, coverage, pylint, docs
 ;py36
 
+[testenv]
+whitelist_externals = cmd
+
 [testenv:test]
 deps = pytest
 commands = pytest
-whitelist_externals = cmd
 
 [testenv:mypy]
 description = Type Checks the code, runs in strict mode, ensures all code has type annotations.
 deps = mypy
-commands = mypy {[main]app_name} --strict
+commands = mypy "{toxinidir}/{[main]app_name}" --strict
 
 [testenv:coverage]
 deps = coverage
-commands =
-           coverage erase
+commands = coverage erase
            cmd /C if exist htmlcov rmdir /S /Q htmlcov
-           coverage run --branch __main__.py test
-           coverage report --omit='.tox/*,venv/*,tests/'
-           coverage html --omit='.tox/*,venv/*,tests/'
+           coverage run --branch --rcfile='{toxinidir}\coverage.ini'  __main__.py test
+           coverage report --omit='.tox/*,venv/*,tests/' --rcfile='{toxinidir}\coverage.ini'
+           coverage html --omit='.tox/*,venv/*,tests/' --rcfile='{toxinidir}\coverage.ini'
            cmd /C start htmlcov/index.html
 
 [testenv:pylint]
@@ -37,5 +38,6 @@ commands = cmd /C if exist "{toxinidir}\docs\rst" rmdir /S /Q "{toxinidir}\docs\
            sphinx-apidoc -f -o "{toxinidir}\docs\rst" "{toxinidir}/{[main]app_name}"
            docs\make.bat clean
            docs\make.bat html
+           cmd /C echo Documentation can be found in {toxinidir}\docs\_build\html\index.html
 whitelist_externals = make.bat
                       cmd
