--- a/tox.ini
+++ b/tox.ini
@@ -2,12 +2,16 @@
 app_name = bsuos
 
 [tox]
+skipsdist = True
 envlist =  test, mypy, coverage, pylint, docs
-;py36
+setenv = {toxinifile}
+;setenv is really important, sets the pythonpath to here.
+;skipsdist = prevents it from packaging the program & setup.py (but runs it directly)
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 whitelist_externals = cmd
+changedir={toxinidir}
 
 [testenv:test]
 deps = {[testenv]deps}
@@ -30,7 +34,8 @@ commands = coverage erase
 
 [testenv:pylint]
 description = scores the code's linting quality.
-commands = pylint {[main]app_name}
+commands = black {[main]app_name}
+           pylint {[main]app_name}
 
 [testenv:docs]
 description = Invoke sphinx-build to build the HTML docs
