--- a/tox.ini
+++ b/tox.ini
@@ -4,14 +4,15 @@ app_name = bsuos
 [tox]
 skipsdist = True
 envlist =  test, mypy, coverage, pylint, docs
-setenv = {toxinifile}
-;setenv is really important, sets the pythonpath to here.
-;skipsdist = prevents it from packaging the program & setup.py (but runs it directly)
+
 
 [testenv]
 deps = -r{toxinidir}/requirements.txt
 whitelist_externals = cmd
 changedir={toxinidir}
+setenv =
+    PYTHONPATH = {toxinidir}
+;setenv is really important (it sets any environment variables, e.g. PRODUCTION = True).
 
 [testenv:test]
 deps = {[testenv]deps}
