--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,14 @@
 [main]
-app_name = bsuos
+app_name = NonPortalRegistrations
 
 [tox]
-skipsdist = True
-envlist = test, mypy, pylint, docs
-
+skipsdist = False
+envlist = test, mypy, pylint
+#, docs
 
 [testenv]
-deps = -r{toxinidir}/requirements.txt
-
+deps = -Ur{toxinidir}/requirements.txt
+passenv = *
 whitelist_externals = cmd
 changedir = {toxinidir}
 setenv =
@@ -18,9 +18,10 @@ setenv =
 deps = {[testenv]deps}
        pytest
        pytest-cov
+       pytest-mock
 commands = cmd /C if exist htmlcov rmdir /S /Q htmlcov
-           pytest --cov-config coverage.ini --cov-report html --cov=bsuos tests/
-           pytest --cov-config coverage.ini --cov=bsuos tests/
+           pytest --doctest-modules --cov {[main]app_name} --cov-config coverage.ini  --cov-report html
+           # --cov=solib tests/ --cov-config coverage.ini --cov-report html
            cmd /C start htmlcov/index.html
 
 [testenv:mypy]
@@ -29,18 +30,16 @@ deps = {[testenv]deps}
        mypy
 commands = mypy "{toxinidir}/{[main]app_name}" --ignore-missing-imports --strict
 
-;[testenv:coverage]
-;commands =
-;           coverage erase
-;           coverage run --branch --rcfile='{toxinidir}\coverage.ini' __main__.py test
-;           coverage report --omit='.tox/*,venv/*,tests/' --rcfile='{toxinidir}\coverage.ini'
-;           coverage html --omit='.tox/*,venv/*,tests/' --rcfile='{toxinidir}\coverage.ini'
-;           ;cmd /C start htmlcov/index.html
 
 [testenv:pylint]
 description = scores the code's linting quality.
+deps = {[testenv]deps}
+       black
+        pylint
 commands = black {[main]app_name}
-           pylint {[main]app_name}
+           # pylint {[main]app_name}
+           python run_pylint.pyrun  --fail-under=10 {[main]app_name}
+
 
 [testenv:docs]
 description = Invoke sphinx-build to build the HTML docs
@@ -49,6 +48,6 @@ commands = cmd /C if exist "{toxinidir}\docs\rst" rmdir /S /Q "{toxinidir}\docs\
            docs\make.bat clean
            docs\make.bat html
            cmd /C echo Documentation can be found here: {toxinidir}\docs\_build\html\index.html
-           cmd /C start docs\_build\html\index.html
+;           cmd /C start docs\_build\html\index.html
 whitelist_externals = make.bat
                       cmd
