--- a/tox.ini
+++ b/tox.ini
@@ -1,4 +1,4 @@
-## make sure __NO SPACES BETWEEN [testenv:ENV_NAME]__ ##
+## make sure __NO SPACES BETWEEN COLON, e.g. [testenv:ENV_NAME]__ ##
 [main]
 app_name = NonPortalRegistrations
 
